gccida/c0/do_compare_and_jump
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_and_jump/src/expr.c:10532:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code signed_code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_and_jump/src/expr.c:10533:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code unsigned_code, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_and_jump/src/expr.c:10538:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // [rsp+48h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_and_jump/src/expr.c:10570:53: error: use of undeclared identifier 'machine_mode'
do_compare_rtx_and_jump( op0, op1, v6, unsignedp, ( machine_mode)mode, size, if_false_label, if_true_label); 
                                                    ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_compare_and_jump/src/obj/expr.o] Error 1
